in der klasse PlayerInput mehtode getPressedKeysSnapShot() verbessert